move file permission settings to deploy workflow

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -161,4 +161,6 @@ jobs:
           script: |
             export TAG=staging
             cd /opt/tinyls
+            sudo chmod 600 infra/traefik/usersfile
+            sudo chmod 600 infra/traefik/acme.json
             ./scripts/deploy.sh
