implement redis caching in backend

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,11 @@ services:
     ports:
       - "8080:8080"
 
+  redis:
+    restart: "no"
+    ports:
+      - "6379:6379"
+
   backend:
     restart: "no"
     ports:
