--- a/url-shortener/src/main/resources/application.properties
+++ b/url-shortener/src/main/resources/application.properties
@@ -12,6 +12,25 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # -------------------------------------------------
+#  Cache Configuration (Redis)
+# -------------------------------------------------
+spring.cache.type=redis
+spring.data.redis.host=${REDIS_HOST:redis}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.database=${REDIS_DATABASE:0}
+spring.cache.redis.time-to-live=3600s
+spring.data.redis.timeout=2000ms
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=tinyls:
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+spring.data.redis.lettuce.pool.max-wait=-1ms
+
+
+# -------------------------------------------------
 #  Server Configuration
 # -------------------------------------------------
 server.port=8000
@@ -82,7 +101,6 @@ spring.flyway.locations=classpath:db/migration
 # -------------------------------------------------
 #  Actuator Configuration
 # -------------------------------------------------
-management.endpoints.web.exposure.include: health,info
+management.endpoints.web.exposure.include: health,info,caches
 management.endpoint.health.show-details: always
 management.endpoint.mongodb.enabled: false
-
