--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,12 @@ POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=you-postgres-password
+POSTGRES_PASSWORD=your-postgres-password
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=your-redis-password
 
 # Docker registry images
 DOCKER_IMAGE_BACKEND=tinyls-backend
