--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,22 @@ services:
     networks:
       - default
 
+  redis:
+    image: redis:7-alpine
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      start_period: 10s
+      retries: 5
+    volumes:
+      - app-redis-data:/data
+    env_file:
+      - .env
+    networks:
+      - default
+
   frontend:
     image: "${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}"
     restart: always
@@ -50,6 +66,9 @@ services:
       db:
         condition: service_healthy
         restart: true
+      redis:
+        condition: service_healthy
+        restart: true
     env_file:
       - .env
     healthcheck:
@@ -64,6 +83,7 @@ services:
 
 volumes:
   app-db-data:
+  app-redis-data:
 
 networks:
   default:
