put args explicitly in frontend dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,14 @@ COPY ./ /app/
 
 ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
+ARG VITE_SOCIAL_PERSONAL_URL
+ENV VITE_SOCIAL_PERSONAL_URL=$VITE_SOCIAL_PERSONAL_URL
+ARG VITE_SOCIAL_GITHUB_URL
+ENV VITE_SOCIAL_GITHUB_URL=$VITE_SOCIAL_GITHUB_URL
+ARG VITE_SOCIAL_LINKEDIN_URL
+ENV VITE_SOCIAL_LINKEDIN_URL=$VITE_SOCIAL_LINKEDIN_URL
+ARG VITE_SOCIAL_INSTAGRAM_URL
+ENV VITE_SOCIAL_INSTAGRAM_URL=$VITE_SOCIAL_INSTAGRAM_URL
 
 RUN npm ci && npm run build
 
